2004-12-21  Nathan Sidwell  <nathan@codesourcery.com>

	* system.c (IN_RANGE): Use plain unsigned, not unsigned
	HOST_WIDE_INT.
	* tree.def (VOID_TYPE, INTEGER_TYPE, REAL_TYPE, COMPLEX_TYPE,
	VECTOR_TYPE, OFFSET_TYPE, ENUMERAL_TYPE, BOOLEAN_TYPE, CHAR_TYPE,
	POINTER_TYPE, REFERENCE_TYPE, METHOD_TYPE, FUNCTION_TYPE,
	FILE_TYPE, ARRAY_TYPE, RECORD_TYPE, UNION_TYPE,
	QUAL_UNION_TYPE): Reorder for better code efficiency.
	(CONST_DECL, TYPE_DECL, VAR_DECL, FIELD_DECL, PARM_DECL): Likewise.
	(INDIRECT_REF, ALIGN_INDIRECT_REF, MISALIGNED_INDIRECT_REF): Likewise.
	* tree.h (INDIRECT_REF_P): Reorder checks for better optimization.
	(IS_EXPR_CODE_CLASS): Use IN_RANGE.
	(INTEGRAL_TYPE_P, FLOAT_TYPE_P): Reorder checks for better
	optimization.

2004-12-21  David O'Brien  <obrien@FreeBSD.org>

	* config/freebsd-spec.h:  Use KSE pthread lib for -pthread.

2004-12-21  James A. Morrison  <phython@gcc.gnu.org>

	PR c/18963
	* c-decl.c (pushdecl): Remove block trying to merge static function
	declarations at block scope to file scope declarations.

2004-12-21  James A. Morrison  <phython@gcc.gnu.org>

	PR c/18596
	* c-parse.in (initdcl): Don't process a declaration if start_decl fails.
	(notype_initdcl):  Don't process a declaration if start_decl fails.
	* c-decl.c (start_decl): Fail if grokdeclarator fails.
	(grokdeclarator): Fail if a function definition has an invalid storage
	class.
	* c-typeck.c (start_init): Treat error_mark_node the same as 0.

2004-12-21  Richard Henderson  <rth@redhat.com>

	* config/i386/i386.c (x86_sse_split_regs): Rename from
	x86_sse_partial_regs.
	* config/i386/i386.h (x86_sse_split_regs): Likewise.
	(TARGET_SSE_SPLIT_REGS): Rename from TARGET_SSE_PARTIAL_REGS.
	* config/i386/i386.md (*): Update to match.  Remove two
	floatsisf splitters that use it.

	* config/i386/i386.h (x86_sse_partial_regs_for_cvtsd2ss): Remove.

	* config/i386/i386.c (x86_sse_partial_regs_for_cvtsd2ss): Remove.
	* config/i386/i386.h (TARGET_SSE_PARTIAL_REGS_FOR_CVTSD2SS): Remove.